frame/support/test/tests/pallet_ui/genesis_default_not_satisfied.stderr
error[E0277]: the trait bound `pallet::GenesisConfig: std::default::Default` is not satisfied
   --> tests/pallet_ui/genesis_default_not_satisfied.rs:22:18
    |
22  |     impl<T: Config> GenesisBuild<T> for GenesisConfig {}
    |                     ^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `pallet::GenesisConfig`
    |
note: required by a bound in `GenesisBuild`
   --> $WORKSPACE/frame/support/src/traits/hooks.rs
    |
    | pub trait GenesisBuild<T, I = ()>: Default + sp_runtime::traits::MaybeSerializeDeserialize {
    |                                    ^^^^^^^ required by this bound in `GenesisBuild`
